<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Upload_Profile"
    >

    <include layout="@layout/pagestoolbar_backbtn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_below="@id/toolbar">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileCard"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/lightGrayBG"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/darkgrayborder">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ADD_employee_info"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="102dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_add_a_photo_24"
                android:id="@+id/uploadImage"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textviewUpload"
                android:text="Upload Image"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/blue"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/uploadName"
                android:backgroundTint="@color/white"
                android:background="@drawable/darkgrayborder"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/employee_full_name"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/uploadEmpID"
                android:backgroundTint="@color/white"
                android:background="@drawable/darkgrayborder"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/employee_id"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/uploadAge"
                android:backgroundTint="@color/white"
                android:background="@drawable/darkgrayborder"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/age"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/uploadHeight"
                android:backgroundTint="@color/white"
                android:background="@drawable/darkgrayborder"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/height"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/uploadWeight"
                android:backgroundTint="@color/white"
                android:background="@drawable/darkgrayborder"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/weight"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/uploadDeviceID"
                android:backgroundTint="@color/white"
                android:background="@drawable/darkgrayborder"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/device_id"
                android:gravity="start|center_vertical"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Save"
                android:id="@+id/uploadButton"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressLayout"
                    android:layout_width="0dp"
                    android:layout_gravity=""
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminateTint="@color/OutlineGray"/>


            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </ScrollView>
</RelativeLayout>