<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/DarkGray"
        tools:context=".Login"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/Logoimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:src="@drawable/loginlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="1.0" />

    <Button
            android:id="@+id/SignUpACC"
            android:layout_width="125.86dp"
            android:layout_height="56dp"


            android:layout_marginTop="376dp"
            android:background="@drawable/graybuttonround"
            android:text="@string/sign_up"


            android:textColor="@color/white"
            android:textSize="21sp"
            app:backgroundTint="#8B8686"
            app:layout_constraintBottom_toTopOf="@+id/Welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.698"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <Button
            android:id="@+id/LoginAcc"
            android:layout_width="125.86dp"
            android:layout_height="56dp"
            android:layout_marginTop="376dp"

            android:background="@drawable/roundblack"


            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="21sp"

            app:backgroundTint="#000000"
            app:layout_constraintBottom_toTopOf="@+id/Welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.284"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />


        <ImageView
            android:id="@+id/Welcome"
            android:layout_width="329dp"
            android:layout_height="57dp"

            android:layout_marginTop="455dp"
            android:layout_marginBottom="308dp"
            android:src="@drawable/welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/rectangleEmail"
            android:layout_width="341dp"
            android:layout_height="61dp"
            android:layout_marginBottom="216dp"

            android:src="@drawable/rectangle_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Welcome"
            app:layout_constraintVertical_bias="0.903" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"

            android:hint="Email Address                    "
            android:textColor="@color/black"

            android:textColorHint="@color/DarkGray"
            app:layout_constraintBottom_toBottomOf="@+id/rectangleEmail"
            app:layout_constraintEnd_toEndOf="@+id/rectangleEmail"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toEndOf="@+id/emailImage"

            app:layout_constraintTop_toTopOf="@+id/rectangleEmail">

        </com.google.android.material.textfield.TextInputEditText>

        <ImageView
            android:id="@+id/emailImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:src="@drawable/mail"
            app:layout_constraintBottom_toBottomOf="@+id/rectangleEmail"

            app:layout_constraintEnd_toEndOf="@+id/rectangleEmail"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="@+id/rectangleEmail"
            app:layout_constraintTop_toTopOf="@+id/rectangleEmail"
            app:layout_constraintVertical_bias="0.875" />

        <ImageView
            android:id="@+id/rectanglePassword"
            android:layout_width="341dp"
            android:layout_height="61dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/rectangle_1"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangleEmail"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="7dp"
            android:layout_marginEnd="52dp"

            android:layout_marginBottom="12dp"
            android:hint="Password                            "
            android:textColor="@color/black"
            android:textColorHint="@color/DarkGray"
            app:layout_constraintBottom_toBottomOf="@+id/rectanglePassword"
            app:layout_constraintEnd_toEndOf="@+id/rectanglePassword"

            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/lockImage"
            app:layout_constraintTop_toBottomOf="@+id/rectangleEmail">

        </com.google.android.material.textfield.TextInputEditText>

        <ImageView
            android:id="@+id/lockImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="277dp"


            android:src="@drawable/lock"
            app:layout_constraintBottom_toBottomOf="@+id/rectanglePassword"
            app:layout_constraintEnd_toEndOf="@+id/rectanglePassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/rectanglePassword"
            app:layout_constraintTop_toTopOf="@+id/rectanglePassword" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="28dp"

        android:layout_marginBottom="86dp"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.317">

    </ProgressBar>
        <Button
            android:id="@+id/login"

            android:layout_width="199dp"
            android:layout_height="48dp"

            android:layout_marginBottom="84dp"


            android:text="@string/login"
            android:textSize="21sp"


            app:background="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectanglePassword"
            app:layout_constraintVertical_bias="0.59">

        </Button>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/forgot_password"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.246">

    </TextView>



</androidx.constraintlayout.widget.ConstraintLayout>

